updated css and js. fixed layout issue for frontend editing

--- a/Resources/public/sonata/css/page.css
+++ b/Resources/public/sonata/css/page.css
@@ -57,6 +57,8 @@
 .cms-edit-mode .cms-container {
     padding-top: 24px;
     border: 2px dotted rgba(100, 100, 100, 1);
+    min-width: 200px;
+    min-height: 100px;
 }
 
 /*.cms-edit-mode .cms-container > .cms-layout-layer {*/
